--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 /*todos los elementos dentro del body */
 body{
     text-align: center;
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /*fin elementos dentro del body*/
 
@@ -20,7 +20,6 @@ body{
     justify-content: center;
     align-items: center;
 }
-
 /*fin pagina principal */
 
 /*barra de navegacion*/
@@ -28,8 +27,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 7rem;
-    background:rgb(6, 37, 122);
+    height: 100px;
+    background:rgb(160, 145, 14);
     position: fixed;
     width: 100%;
     z-index: 100%;
@@ -37,8 +36,7 @@ body{
 }
 .navbar{
     display: flex;
-    margin: 10px ;
-    
+    margin: 10px ;  
 }
 
 .logo {
@@ -59,23 +57,22 @@ body{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 20px;
-    background: rgb(33, 212, 212);
-    border-radius: 40%;
+    background: rgb(99, 212, 33);
+    border-radius: 20%;
     margin: 0 2rem 0 3rem;
     
 }
 
 .navbar a:hover{
-    color:white;
+    color:rgb(236, 9, 9);
 }
 .search{
     display: flex;
     align-items: center;
-    margin-right:3rem ;
 }
 
 .head .logo_name{
-    color: white;
+    color: rgb(126, 10, 78);
     font-size: 2rem;
 }
 /*fin barra de navegacion*/
