--- a/css/contactos.css
+++ b/css/contactos.css
@@ -1,11 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
+
+:root{
+    --verde:#0c443a;
+    --limon:#25d1b2;
+    --degradado:linear-gradient(90deg, var(--limon),var(--verde));
+}
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;;
+    box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 
 }
-
-
 
 body{
     text-align: center;
@@ -28,15 +35,15 @@ body{
     z-index: 100%;
     animation: Gradient 12s ease-in-out infinite;
     color: white;
+    text-transform: uppercase;
 
 
 }
 
 .content_header{
-    background-color: url(../img/a.webp);
+    background-color: url(../a.webp);
 }
  
-
 
 @keyframes Gradient {
     0% { background-position: 0% 50%; }
@@ -44,7 +51,15 @@ body{
     100% { background-position: 0% 50%; }
 }
 
+.head .logo{
+    font-size: 2rem;
+    color: var(--verde);
+    text-decoration: none;
+}
 
+.head .logo span{
+    color: var(--limon);
+}
 
 
 .container{
