--- a/wikicolabora/css/contactos.css
+++ b/wikicolabora/css/contactos.css
@@ -18,7 +18,8 @@ body{
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 100px;
-
+    background-color: #21262b; 
+    color: white; 
 }
 
 .head{
