--- a/wikicolabora/css/diferencias.css
+++ b/wikicolabora/css/diferencias.css
@@ -18,7 +18,7 @@ body{
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 100px;
-
+    color: white; 
 }
 
 .head{
@@ -187,3 +187,5 @@ line-height: 70px;
     cursor: pointer;
     font-size: 18px;
 }
+
+
