--- a/wikicolabora/css/servicios.css
+++ b/wikicolabora/css/servicios.css
@@ -18,7 +18,8 @@ body{
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 100px;
-
+    background-color: #21262b; 
+    color: white; 
 }
 
 .head{
@@ -66,6 +67,8 @@ body{
     width: 90%;
     max-width: 1200px;
     margin: auto;
+
+    
 }
 
 .container .btn-menu, .logo{
@@ -187,3 +190,9 @@ line-height: 70px;
     cursor: pointer;
     font-size: 18px;
 }
+
+
+
+
+
+
