--- a/WIKIColabora/css/servicios.css
+++ b/WIKIColabora/css/servicios.css
@@ -1,205 +1,213 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
 
-:root{
-    --verde:#19c59aa6;
-   --limon:#25d1b2;
-    --degradado:linear-gradient(90deg, var(--limon),var(--verde));
+:root {
+    --blanco:#fff;
+    --rosa:#ff66cc;
+    --verde: #0c443a;
+    --limon: #25d1b2;
+    --degradado: linear-gradient(90deg, var(--limon), var(--verde));
 }
 
 *{
+    border: 0;
+    margin: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+}
+
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
-
+    font-family: poppins;
 }
 
-body{
-    text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-top: 100px;
-    background-color: #08a3b8; 
-    color: rgb(27, 27, 27); 
+ol{
+    list-style: none;
 }
-
-.head{
+/*BARRA DE NAVEGACION*/
+.head {
     width: 100%;
     height: 70px;
     position: fixed;
     z-index: 10;
-    top: 0;left: 0;
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 4);
-    background: linear-gradient(45deg, #000033, #0000b3, #2c05da, #000033);
+    box-shadow: none;
+    background: linear-gradient(45deg, #101010, #171717, #515170, #4a5a61);
     background-size: 400% 400%;
     position: fixed;
     width: 100%;
     z-index: 100%;
     animation: Gradient 12s ease-in-out infinite;
-    color: white;
+    color: rgb(255, 255, 255);
     text-transform: uppercase;
 
 
 }
 
-.content_header{
-    background-color: url(../a.webp);
-}
- 
-
-@keyframes Gradient {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-}
-
-/*logo wikicolabora*/
-.head .logo{
-    font-size: 2.5rem;
-    color: var(--verde);
-    text-decoration: none;
-}
-
-.head .logo span{
-    color: var(--limon);
+.wiki {
+    font-size: 50px;
+    font-weight: bold;
+    color: white;
+    position: relative;
+    font-family: 'Impact', sans-serif;
+    letter-spacing: 2px;
+    display: inline-block;
 }
 
 
-.container{
-   
+.colabora {
+    font-size: 30px;
+    font-weight: bold;
+    color: #ff66cc;
+    display: inline-block;
+    font-family: 'Impact', sans-serif;
+    margin-left: 5px;
+
+}
+.container {
     width: 90%;
     max-width: 1200px;
     margin: auto;
-
-    
 }
-
-.container .btn-menu, .logo{
+/*ubicacion de los elemtentos en el contenedor en este caso 3 elementos*/
+.container .btn-menu,
+.logo {
     float: left;
     line-height: 75px;
 }
-
-.logo h1 {
-    font-size: 2.5rem;
-    color: white;
-    font-weight: 400;
-    font-size: 22px;
-    margin-left: 10px;
-
-}
-
-
-.menu{
+/*---------------------------*/
+/*ubicacion en el contenedor entes caso elementos a*/
+.menu {
     float: right;
     line-height: 75px;
 }
-
-.menu a{
-    color: white;
+/*---------------------------*/
+.menu a {
+    color: var(--limon);
     text-decoration: none;
     display: inline-block;
     padding: 10px 15px;
     line-height: normal;
-    font-size: 14px;
+    font-size: 1rem;
     transition: all 500ms ease;
 
 }
 
-.menu a:hover{
-    color: #000000;
-
-
-}
-
-
-
-.search {
-    position: absolute;
-    top: 20px;
-    left: 900px;
-
-}
-
-
-
-.btn-menu{
-
-float: left;
-line-height: 70px;
-
-
-}
-
-
-.btn-menu label{
+/* hover de los lementos del navbar */
+.menu a:hover {
     color: #fff;
-    font-size: 25px;
-    cursor: pointer;
 }
 
 
-/*MENU LATERAL*/
+/* TARJETAS SERVICIOS */
+.tarjetas-s {
+    height: 100vh !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #1f1d1d;
+    
 
-#btn-menu{
-    display: none;
 }
-.container-menu{
-    position: absolute;
-    background: rgba(0,0,0,0.5);
-    width: 100%;
-    height: 100vh;
-    top: 0;left: 0;
-    transition: all 500ms ease;
-    opacity: 0;
-    visibility: hidden;
-    z-index: 20;
+
+.servibox{
+    display: flex;
+    flex-direction: row;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center;
+    flex-wrap: wrap;
 }
-#btn-menu:checked ~ .container-menu{
-    opacity: 1;
-    visibility: visible;
-}
-.cont-menu{
-    width: 100%;
-    max-width: 250px;
-    background: #1c1c1c;
-    height: 100vh;
+
+.servibox .box {
     position: relative;
-    transition: all 500ms ease;
-    transform: translateX(-100%);
-}
-#btn-menu:checked ~ .container-menu .cont-menu{
-    transform: translateX(0%);
-}
-.cont-menu nav{
-    transform: translateY(15%);
-}
-.cont-menu nav a{
-    display: block;
-    text-decoration: none;
+    width: 40vh;
+    height: 40vh;
+    background: #25d1b2;
+    margin: 10px;
     padding: 20px;
-    color: #c7c7c7;
-    border-left: 5px solid transparent;
-    transition: all 400ms ease;
+    box-shadow: 0 15px 45px rgba(0, 0, 0, 0.1);
+    text-align: start;
 }
-.cont-menu nav a:hover{
-    border-left: 5px solid #c7c7c7;
-    background: #1f1f1f;
+
+.servibox .box p {
+    position: relative;
+    top: 50%;
+    font-size: 1.5rem;
+    color: #ffffff;
+    transition: 0.5s;
+    font-weight: 600;
+    text-transform: uppercase;
 }
-.cont-menu label{
+
+.servibox .box:before {
+    content: '';
     position: absolute;
-    right: 5px;
-    top: 10px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 18px;
-}
-
-.card-group .card{
-    background-color:var(--blanco);
-}
-
-
-.card-group .card img{
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 22.5rem;
+    height: 100%;
+    background-color: #FBAB7E;
+    background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+    transform: scaleY(0);
+    transform-origin: top;
+    transition: transform 0.5s;
 }
 
+.servibox .box:hover:before {
+    transform: scaleY(1);
+    transform-origin: bottom;
+    transition: transform 0.5s;
+}
+
+.servibox .box h2 {
+    position: absolute;
+    left: 20px;
+    top: 50px;
+    font-size: 4em;
+    font-weight: 800;
+    z-index: 1;
+    opacity: 0.5;
+    transition: 0.5s;
+}
+
+.servibox .box:hover h2 {
+    opacity: 1;
+    color: #fff;
+    transform: translateY(-40px);
+}
+
+.servibox .box:hover p {
+    opacity: 1;
+    color: var(--verde);
+    transform: translateY(-40px);
+}
+
+.servibox .box .boton {
+    position: relative;
+    top: 60%;
+    left: 30%;
+    background: var(--rosa);
+    color: black;
+    font-weight: 900;
+    padding: 15px 20px;
+    font-size: 13px;
+    border-radius: 40px;
+    cursor: pointer;
+    transition: .5s, color .10s;
+}
+
+.servibox .box:hover .boton {
+    background: linear-gradient(144deg, #f940ff, #5b42f3 50%, #00ddeb);
+    transform: scale3d(1.1, 1.1, .3);
+    color: var(--blanco);
+
+}
+
+
+/* Footer */
+.contactos {
+    display: flex;
+    justify-content: space-around;
+    background: #000000;
+    color: #ffffff;
+    width: 100%;
+}
